// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ForkliftPage Snapshot Create 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Router
    history={
      Object {
        "action": "PUSH",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "KEY_NEW1",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          Object {
            "hash": "",
            "key": "KEY_NEW2",
            "pathname": "//new",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 1,
        "length": 2,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "KEY_NEW2",
          "pathname": "//new",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <ModalLoading>
      <Modal
        animation={false}
        autoFocus={true}
        backdrop={true}
        centered={true}
        dialogAs={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "displayName": "ModalDialog",
            "render": [Function],
          }
        }
        enforceFocus={true}
        keyboard={true}
        onHide={[Function]}
        restoreFocus={true}
        show={true}
        size="lg"
      >
        <Modal
          autoFocus={true}
          backdrop={true}
          containerClassName="modal-open"
          enforceFocus={true}
          keyboard={true}
          manager={
            BootstrapModalManager {
              "containers": Array [
                <body
                  class="modal-open"
                  style="padding-right: 0px;"
                >
                  <div
                    aria-hidden="true"
                    class="modal-backdrop show"
                  />
                  <div
                    aria-hidden="true"
                    aria-modal="true"
                    class="modal"
                    role="dialog"
                    style="display: block;"
                    tabindex="-1"
                  >
                    <div
                      class="modal-dialog modal-lg modal-dialog-centered"
                      role="document"
                    >
                      <div
                        class="modal-content"
                      >
                        <div
                          class="d-flex justify-content-center"
                        >
                          <div
                            class="m-5 spinner-border text-info"
                            role="status"
                            style="width: 5rem; height: 5rem;"
                          >
                            <span
                              class="sr-only"
                            >
                              Loading....
                            </span>
                          </div>
                        </div>
                        <div
                          class="fade alert alert-info show"
                          role="alert"
                        >
                          Carregando Localizações e Operadores ...
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="modal-backdrop show"
                  />
                  <div
                    aria-modal="true"
                    class="modal"
                    role="dialog"
                    style="display: block;"
                    tabindex="-1"
                  >
                    <div
                      class="modal-dialog modal-lg modal-dialog-centered"
                      role="document"
                    >
                      <div
                        class="modal-content"
                      >
                        <div
                          class="d-flex justify-content-center"
                        >
                          <div
                            class="m-5 spinner-border text-info"
                            role="status"
                            style="width: 5rem; height: 5rem;"
                          >
                            <span
                              class="sr-only"
                            >
                              Loading....
                            </span>
                          </div>
                        </div>
                        <div
                          class="fade alert alert-info show"
                          role="alert"
                        >
                          Carregando Localizações e Operadores ...
                        </div>
                      </div>
                    </div>
                  </div>
                </body>,
              ],
              "data": Array [
                Object {
                  "classes": Array [
                    "modal-open",
                  ],
                  "modals": Array [
                    Object {
                      "add": [Function],
                      "backdrop": <div
                        aria-hidden="true"
                        class="modal-backdrop show"
                      />,
                      "dialog": <div
                        aria-hidden="true"
                        aria-modal="true"
                        class="modal"
                        role="dialog"
                        style="display: block;"
                        tabindex="-1"
                      >
                        <div
                          class="modal-dialog modal-lg modal-dialog-centered"
                          role="document"
                        >
                          <div
                            class="modal-content"
                          >
                            <div
                              class="d-flex justify-content-center"
                            >
                              <div
                                class="m-5 spinner-border text-info"
                                role="status"
                                style="width: 5rem; height: 5rem;"
                              >
                                <span
                                  class="sr-only"
                                >
                                  Loading....
                                </span>
                              </div>
                            </div>
                            <div
                              class="fade alert alert-info show"
                              role="alert"
                            >
                              Carregando Localizações e Operadores ...
                            </div>
                          </div>
                        </div>
                      </div>,
                      "isTopModal": [Function],
                      "remove": [Function],
                      "setBackdropRef": [Function],
                      "setDialogRef": [Function],
                    },
                    Object {
                      "add": [Function],
                      "backdrop": <div
                        class="modal-backdrop show"
                      />,
                      "dialog": <div
                        aria-modal="true"
                        class="modal"
                        role="dialog"
                        style="display: block;"
                        tabindex="-1"
                      >
                        <div
                          class="modal-dialog modal-lg modal-dialog-centered"
                          role="document"
                        >
                          <div
                            class="modal-content"
                          >
                            <div
                              class="d-flex justify-content-center"
                            >
                              <div
                                class="m-5 spinner-border text-info"
                                role="status"
                                style="width: 5rem; height: 5rem;"
                              >
                                <span
                                  class="sr-only"
                                >
                                  Loading....
                                </span>
                              </div>
                            </div>
                            <div
                              class="fade alert alert-info show"
                              role="alert"
                            >
                              Carregando Localizações e Operadores ...
                            </div>
                          </div>
                        </div>
                      </div>,
                      "isTopModal": [Function],
                      "remove": [Function],
                      "setBackdropRef": [Function],
                      "setDialogRef": [Function],
                    },
                  ],
                  "overflowing": true,
                  "style": Object {
                    "overflow": "",
                    "paddingRight": "",
                  },
                },
              ],
              "handleContainerOverflow": true,
              "hideSiblingNodes": true,
              "modals": Array [
                Object {
                  "add": [Function],
                  "backdrop": <div
                    aria-hidden="true"
                    class="modal-backdrop show"
                  />,
                  "dialog": <div
                    aria-hidden="true"
                    aria-modal="true"
                    class="modal"
                    role="dialog"
                    style="display: block;"
                    tabindex="-1"
                  >
                    <div
                      class="modal-dialog modal-lg modal-dialog-centered"
                      role="document"
                    >
                      <div
                        class="modal-content"
                      >
                        <div
                          class="d-flex justify-content-center"
                        >
                          <div
                            class="m-5 spinner-border text-info"
                            role="status"
                            style="width: 5rem; height: 5rem;"
                          >
                            <span
                              class="sr-only"
                            >
                              Loading....
                            </span>
                          </div>
                        </div>
                        <div
                          class="fade alert alert-info show"
                          role="alert"
                        >
                          Carregando Localizações e Operadores ...
                        </div>
                      </div>
                    </div>
                  </div>,
                  "isTopModal": [Function],
                  "remove": [Function],
                  "setBackdropRef": [Function],
                  "setDialogRef": [Function],
                },
                Object {
                  "add": [Function],
                  "backdrop": <div
                    class="modal-backdrop show"
                  />,
                  "dialog": <div
                    aria-modal="true"
                    class="modal"
                    role="dialog"
                    style="display: block;"
                    tabindex="-1"
                  >
                    <div
                      class="modal-dialog modal-lg modal-dialog-centered"
                      role="document"
                    >
                      <div
                        class="modal-content"
                      >
                        <div
                          class="d-flex justify-content-center"
                        >
                          <div
                            class="m-5 spinner-border text-info"
                            role="status"
                            style="width: 5rem; height: 5rem;"
                          >
                            <span
                              class="sr-only"
                            >
                              Loading....
                            </span>
                          </div>
                        </div>
                        <div
                          class="fade alert alert-info show"
                          role="alert"
                        >
                          Carregando Localizações e Operadores ...
                        </div>
                      </div>
                    </div>
                  </div>,
                  "isTopModal": [Function],
                  "remove": [Function],
                  "setBackdropRef": [Function],
                  "setDialogRef": [Function],
                },
              ],
              "scrollbarSize": 0,
            }
          }
          onEnter={[Function]}
          onEntering={[Function]}
          onEscapeKeyDown={[Function]}
          onExit={[Function]}
          onExited={[Function]}
          onHide={[Function]}
          renderBackdrop={[Function]}
          renderDialog={[Function]}
          restoreFocus={true}
          show={true}
        >
          <Portal
            containerInfo={
              <body
                class="modal-open"
                style="padding-right: 0px;"
              >
                <div
                  aria-hidden="true"
                  class="modal-backdrop show"
                />
                <div
                  aria-hidden="true"
                  aria-modal="true"
                  class="modal"
                  role="dialog"
                  style="display: block;"
                  tabindex="-1"
                >
                  <div
                    class="modal-dialog modal-lg modal-dialog-centered"
                    role="document"
                  >
                    <div
                      class="modal-content"
                    >
                      <div
                        class="d-flex justify-content-center"
                      >
                        <div
                          class="m-5 spinner-border text-info"
                          role="status"
                          style="width: 5rem; height: 5rem;"
                        >
                          <span
                            class="sr-only"
                          >
                            Loading....
                          </span>
                        </div>
                      </div>
                      <div
                        class="fade alert alert-info show"
                        role="alert"
                      >
                        Carregando Localizações e Operadores ...
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="modal-backdrop show"
                />
                <div
                  aria-modal="true"
                  class="modal"
                  role="dialog"
                  style="display: block;"
                  tabindex="-1"
                >
                  <div
                    class="modal-dialog modal-lg modal-dialog-centered"
                    role="document"
                  >
                    <div
                      class="modal-content"
                    >
                      <div
                        class="d-flex justify-content-center"
                      >
                        <div
                          class="m-5 spinner-border text-info"
                          role="status"
                          style="width: 5rem; height: 5rem;"
                        >
                          <span
                            class="sr-only"
                          >
                            Loading....
                          </span>
                        </div>
                      </div>
                      <div
                        class="fade alert alert-info show"
                        role="alert"
                      >
                        Carregando Localizações e Operadores ...
                      </div>
                    </div>
                  </div>
                </div>
              </body>
            }
          >
            <div
              className="modal-backdrop show"
              onClick={[Function]}
            />
            <div
              aria-modal={true}
              className="modal"
              onClick={[Function]}
              onMouseUp={[Function]}
              role="dialog"
              style={
                Object {
                  "display": "block",
                }
              }
              tabIndex={-1}
            >
              <ModalDialog
                centered={true}
                onMouseDown={[Function]}
                role="document"
                size="lg"
              >
                <div
                  className="modal-dialog modal-lg modal-dialog-centered"
                  onMouseDown={[Function]}
                  role="document"
                >
                  <div
                    className="modal-content"
                  >
                    <div
                      className="d-flex justify-content-center"
                    >
                      <Spinner
                        animation="border"
                        className="m-5"
                        role="status"
                        style={
                          Object {
                            "height": "5rem",
                            "width": "5rem",
                          }
                        }
                        variant="info"
                      >
                        <div
                          className="m-5 spinner-border text-info"
                          role="status"
                          style={
                            Object {
                              "height": "5rem",
                              "width": "5rem",
                            }
                          }
                        >
                          <span
                            className="sr-only"
                          >
                            Loading....
                          </span>
                        </div>
                      </Spinner>
                    </div>
                    <Alert
                      closeLabel="Close alert"
                      show={true}
                      transition={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "defaultProps": Object {
                            "appear": false,
                            "in": false,
                            "mountOnEnter": false,
                            "timeout": 300,
                            "unmountOnExit": false,
                          },
                          "displayName": "Fade",
                          "render": [Function],
                        }
                      }
                      variant="info"
                    >
                      <Fade
                        appear={false}
                        in={true}
                        mountOnEnter={false}
                        timeout={300}
                        unmountOnExit={true}
                      >
                        <Transition
                          addEndListener={[Function]}
                          appear={false}
                          enter={true}
                          exit={true}
                          in={true}
                          mountOnEnter={false}
                          onEnter={[Function]}
                          onEntered={[Function]}
                          onEntering={[Function]}
                          onExit={[Function]}
                          onExited={[Function]}
                          onExiting={[Function]}
                          timeout={300}
                          unmountOnExit={true}
                        >
                          <div
                            className="fade alert alert-info show"
                            role="alert"
                          >
                            Carregando Equipamentos ...
                          </div>
                        </Transition>
                      </Fade>
                    </Alert>
                  </div>
                </div>
              </ModalDialog>
            </div>
          </Portal>
        </Modal>
      </Modal>
    </ModalLoading>
    <ForkliftPage
      access={
        Object {
          "create": Object {
            "path": "/new",
          },
          "delete": Object {},
          "update": Object {},
        }
      }
    >
      <Switch>
        <Route
          computedMatch={
            Object {
              "isExact": true,
              "params": Object {},
              "path": "//new",
              "url": "//new",
            }
          }
          exact={true}
          location={
            Object {
              "hash": "",
              "key": "KEY_NEW2",
              "pathname": "//new",
              "search": "",
              "state": undefined,
            }
          }
          path="//new"
        >
          <TitleComponent
            description="Cadastro de módulo, equipamento, associa localização e operadores."
            title="Cadastrar Equipamento"
          >
            <Alert
              closeLabel="Close alert"
              show={true}
              transition={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "defaultProps": Object {
                    "appear": false,
                    "in": false,
                    "mountOnEnter": false,
                    "timeout": 300,
                    "unmountOnExit": false,
                  },
                  "displayName": "Fade",
                  "render": [Function],
                }
              }
              variant="primary"
            >
              <Fade
                appear={false}
                in={true}
                mountOnEnter={false}
                timeout={300}
                unmountOnExit={true}
              >
                <Transition
                  addEndListener={[Function]}
                  appear={false}
                  enter={true}
                  exit={true}
                  in={true}
                  mountOnEnter={false}
                  onEnter={[Function]}
                  onEntered={[Function]}
                  onEntering={[Function]}
                  onExit={[Function]}
                  onExited={[Function]}
                  onExiting={[Function]}
                  timeout={300}
                  unmountOnExit={true}
                >
                  <div
                    className="fade alert alert-primary show"
                    role="alert"
                  >
                    <Row
                      className="justify-content-md-center"
                      noGutters={false}
                    >
                      <div
                        className="justify-content-md-center row"
                      >
                        <Col
                          lg="10"
                        >
                          <div
                            className="col-lg-10"
                          >
                            <AlertHeading>
                              <DivStyledAsH4
                                className="alert-heading"
                              >
                                <div
                                  className="alert-heading h4"
                                >
                                  Cadastrar Equipamento
                                </div>
                              </DivStyledAsH4>
                            </AlertHeading>
                            Cadastro de módulo, equipamento, associa localização e operadores.
                          </div>
                        </Col>
                        <Col
                          className="text-center"
                          md="2"
                        >
                          <div
                            className="text-center col-md-2"
                          />
                        </Col>
                      </div>
                    </Row>
                  </div>
                </Transition>
              </Fade>
            </Alert>
            <AlertList>
              <Alert
                closeLabel="Close alert"
                dismissible={true}
                hidden={true}
                onClose={[Function]}
                show={true}
                transition={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "defaultProps": Object {
                      "appear": false,
                      "in": false,
                      "mountOnEnter": false,
                      "timeout": 300,
                      "unmountOnExit": false,
                    },
                    "displayName": "Fade",
                    "render": [Function],
                  }
                }
                variant="primary"
              >
                <Fade
                  appear={false}
                  hidden={true}
                  in={true}
                  mountOnEnter={false}
                  timeout={300}
                  unmountOnExit={true}
                >
                  <Transition
                    addEndListener={[Function]}
                    appear={false}
                    enter={true}
                    exit={true}
                    hidden={true}
                    in={true}
                    mountOnEnter={false}
                    onEnter={[Function]}
                    onEntered={[Function]}
                    onEntering={[Function]}
                    onExit={[Function]}
                    onExited={[Function]}
                    onExiting={[Function]}
                    timeout={300}
                    unmountOnExit={true}
                  >
                    <div
                      className="fade alert alert-primary alert-dismissible show"
                      hidden={true}
                      role="alert"
                    >
                      <CloseButton
                        label="Close alert"
                        onClick={[Function]}
                      >
                        <button
                          className="close"
                          onClick={[Function]}
                          type="button"
                        >
                          <span
                            aria-hidden="true"
                          >
                            ×
                          </span>
                          <span
                            className="sr-only"
                          >
                            Close alert
                          </span>
                        </button>
                      </CloseButton>
                      <StringArrayToList
                        stringArray={
                          Array [
                            "null",
                          ]
                        }
                      >
                        <ul>
                          <li
                            key="0"
                          >
                            null
                          </li>
                        </ul>
                      </StringArrayToList>
                    </div>
                  </Transition>
                </Fade>
              </Alert>
            </AlertList>
          </TitleComponent>
          <CreateForm>
            <PageLoadingComponent
              pageName="Equipamento"
            >
              <div>
                <h3>
                  Equipamento Loading....
                </h3>
              </div>
            </PageLoadingComponent>
          </CreateForm>
        </Route>
      </Switch>
    </ForkliftPage>
  </Router>
</Provider>
`;

exports[`ForkliftPage Snapshot List 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "KEY_LIST1",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "KEY_LIST1",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <ModalLoading>
      <Modal
        animation={false}
        autoFocus={true}
        backdrop={true}
        centered={true}
        dialogAs={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "displayName": "ModalDialog",
            "render": [Function],
          }
        }
        enforceFocus={true}
        keyboard={true}
        onHide={[Function]}
        restoreFocus={true}
        show={false}
        size="lg"
      >
        <Modal
          autoFocus={true}
          backdrop={true}
          containerClassName="modal-open"
          enforceFocus={true}
          keyboard={true}
          manager={
            BootstrapModalManager {
              "containers": Array [
                <body
                  class="modal-open"
                  style="padding-right: 0px;"
                >
                  <div
                    class="modal-backdrop show"
                  />
                  <div
                    aria-modal="true"
                    class="modal"
                    role="dialog"
                    style="display: block;"
                    tabindex="-1"
                  >
                    <div
                      class="modal-dialog modal-lg modal-dialog-centered"
                      role="document"
                    >
                      <div
                        class="modal-content"
                      >
                        <div
                          class="d-flex justify-content-center"
                        >
                          <div
                            class="m-5 spinner-border text-info"
                            role="status"
                            style="width: 5rem; height: 5rem;"
                          >
                            <span
                              class="sr-only"
                            >
                              Loading....
                            </span>
                          </div>
                        </div>
                        <div
                          class="fade alert alert-info show"
                          role="alert"
                        >
                          Carregando Equipamentos ...
                        </div>
                      </div>
                    </div>
                  </div>
                </body>,
              ],
              "data": Array [
                Object {
                  "classes": Array [
                    "modal-open",
                  ],
                  "modals": Array [
                    Object {
                      "add": [Function],
                      "backdrop": <div
                        class="modal-backdrop show"
                      />,
                      "dialog": <div
                        aria-modal="true"
                        class="modal"
                        role="dialog"
                        style="display: block;"
                        tabindex="-1"
                      >
                        <div
                          class="modal-dialog modal-lg modal-dialog-centered"
                          role="document"
                        >
                          <div
                            class="modal-content"
                          >
                            <div
                              class="d-flex justify-content-center"
                            >
                              <div
                                class="m-5 spinner-border text-info"
                                role="status"
                                style="width: 5rem; height: 5rem;"
                              >
                                <span
                                  class="sr-only"
                                >
                                  Loading....
                                </span>
                              </div>
                            </div>
                            <div
                              class="fade alert alert-info show"
                              role="alert"
                            >
                              Carregando Equipamentos ...
                            </div>
                          </div>
                        </div>
                      </div>,
                      "isTopModal": [Function],
                      "remove": [Function],
                      "setBackdropRef": [Function],
                      "setDialogRef": [Function],
                    },
                  ],
                  "overflowing": true,
                  "style": Object {
                    "overflow": "",
                    "paddingRight": "",
                  },
                },
              ],
              "handleContainerOverflow": true,
              "hideSiblingNodes": true,
              "modals": Array [
                Object {
                  "add": [Function],
                  "backdrop": <div
                    class="modal-backdrop show"
                  />,
                  "dialog": <div
                    aria-modal="true"
                    class="modal"
                    role="dialog"
                    style="display: block;"
                    tabindex="-1"
                  >
                    <div
                      class="modal-dialog modal-lg modal-dialog-centered"
                      role="document"
                    >
                      <div
                        class="modal-content"
                      >
                        <div
                          class="d-flex justify-content-center"
                        >
                          <div
                            class="m-5 spinner-border text-info"
                            role="status"
                            style="width: 5rem; height: 5rem;"
                          >
                            <span
                              class="sr-only"
                            >
                              Loading....
                            </span>
                          </div>
                        </div>
                        <div
                          class="fade alert alert-info show"
                          role="alert"
                        >
                          Carregando Equipamentos ...
                        </div>
                      </div>
                    </div>
                  </div>,
                  "isTopModal": [Function],
                  "remove": [Function],
                  "setBackdropRef": [Function],
                  "setDialogRef": [Function],
                },
              ],
              "scrollbarSize": 0,
            }
          }
          onEnter={[Function]}
          onEntering={[Function]}
          onEscapeKeyDown={[Function]}
          onExit={[Function]}
          onExited={[Function]}
          onHide={[Function]}
          renderBackdrop={[Function]}
          renderDialog={[Function]}
          restoreFocus={true}
          show={false}
        />
      </Modal>
    </ModalLoading>
    <ForkliftPage
      access={
        Object {
          "create": Object {
            "path": "/new",
          },
          "delete": Object {},
          "update": Object {},
        }
      }
    >
      <Switch>
        <Route
          computedMatch={
            Object {
              "isExact": true,
              "params": Object {},
              "path": "/",
              "url": "/",
            }
          }
          exact={true}
          location={
            Object {
              "hash": "",
              "key": "KEY_LIST1",
              "pathname": "/",
              "search": "",
              "state": undefined,
            }
          }
          path="/"
        >
          <TitleComponent
            actions={
              <ButtonCreate
                linkTo="//new"
              />
            }
            description="Equipamento cadastrados no sistema."
            title="Equipamento"
          >
            <Alert
              closeLabel="Close alert"
              show={true}
              transition={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "defaultProps": Object {
                    "appear": false,
                    "in": false,
                    "mountOnEnter": false,
                    "timeout": 300,
                    "unmountOnExit": false,
                  },
                  "displayName": "Fade",
                  "render": [Function],
                }
              }
              variant="primary"
            >
              <Fade
                appear={false}
                in={true}
                mountOnEnter={false}
                timeout={300}
                unmountOnExit={true}
              >
                <Transition
                  addEndListener={[Function]}
                  appear={false}
                  enter={true}
                  exit={true}
                  in={true}
                  mountOnEnter={false}
                  onEnter={[Function]}
                  onEntered={[Function]}
                  onEntering={[Function]}
                  onExit={[Function]}
                  onExited={[Function]}
                  onExiting={[Function]}
                  timeout={300}
                  unmountOnExit={true}
                >
                  <div
                    className="fade alert alert-primary show"
                    role="alert"
                  >
                    <Row
                      className="justify-content-md-center"
                      noGutters={false}
                    >
                      <div
                        className="justify-content-md-center row"
                      >
                        <Col
                          lg="10"
                        >
                          <div
                            className="col-lg-10"
                          >
                            <AlertHeading>
                              <DivStyledAsH4
                                className="alert-heading"
                              >
                                <div
                                  className="alert-heading h4"
                                >
                                  Equipamento
                                </div>
                              </DivStyledAsH4>
                            </AlertHeading>
                            Equipamento cadastrados no sistema.
                          </div>
                        </Col>
                        <Col
                          className="text-center"
                          md="2"
                        >
                          <div
                            className="text-center col-md-2"
                          >
                            <ButtonCreate
                              linkTo="//new"
                            >
                              <Button
                                active={false}
                                as={
                                  Object {
                                    "$$typeof": Symbol(react.forward_ref),
                                    "displayName": "Link",
                                    "propTypes": Object {
                                      "innerRef": [Function],
                                      "onClick": [Function],
                                      "replace": [Function],
                                      "target": [Function],
                                      "to": [Function],
                                    },
                                    "render": [Function],
                                  }
                                }
                                disabled={false}
                                to="//new"
                                variant="outline-primary"
                              >
                                <Link
                                  className="btn btn-outline-primary"
                                  disabled={false}
                                  to="//new"
                                >
                                  <LinkAnchor
                                    className="btn btn-outline-primary"
                                    disabled={false}
                                    href="//new"
                                    navigate={[Function]}
                                  >
                                    <a
                                      className="btn btn-outline-primary"
                                      disabled={false}
                                      href="//new"
                                      onClick={[Function]}
                                    >
                                      Cadastrar
                                    </a>
                                  </LinkAnchor>
                                </Link>
                              </Button>
                            </ButtonCreate>
                          </div>
                        </Col>
                      </div>
                    </Row>
                  </div>
                </Transition>
              </Fade>
            </Alert>
            <AlertList>
              <Alert
                closeLabel="Close alert"
                dismissible={true}
                hidden={true}
                onClose={[Function]}
                show={true}
                transition={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "defaultProps": Object {
                      "appear": false,
                      "in": false,
                      "mountOnEnter": false,
                      "timeout": 300,
                      "unmountOnExit": false,
                    },
                    "displayName": "Fade",
                    "render": [Function],
                  }
                }
                variant="primary"
              >
                <Fade
                  appear={false}
                  hidden={true}
                  in={true}
                  mountOnEnter={false}
                  timeout={300}
                  unmountOnExit={true}
                >
                  <Transition
                    addEndListener={[Function]}
                    appear={false}
                    enter={true}
                    exit={true}
                    hidden={true}
                    in={true}
                    mountOnEnter={false}
                    onEnter={[Function]}
                    onEntered={[Function]}
                    onEntering={[Function]}
                    onExit={[Function]}
                    onExited={[Function]}
                    onExiting={[Function]}
                    timeout={300}
                    unmountOnExit={true}
                  >
                    <div
                      className="fade alert alert-primary alert-dismissible show"
                      hidden={true}
                      role="alert"
                    >
                      <CloseButton
                        label="Close alert"
                        onClick={[Function]}
                      >
                        <button
                          className="close"
                          onClick={[Function]}
                          type="button"
                        >
                          <span
                            aria-hidden="true"
                          >
                            ×
                          </span>
                          <span
                            className="sr-only"
                          >
                            Close alert
                          </span>
                        </button>
                      </CloseButton>
                      <StringArrayToList
                        stringArray={
                          Array [
                            "null",
                          ]
                        }
                      >
                        <ul>
                          <li
                            key="0"
                          >
                            null
                          </li>
                        </ul>
                      </StringArrayToList>
                    </div>
                  </Transition>
                </Fade>
              </Alert>
            </AlertList>
          </TitleComponent>
          <List
            access={
              Object {
                "create": Object {
                  "path": "/new",
                },
                "delete": Object {},
                "update": Object {},
              }
            }
            baseUrl="/"
          >
            <PageLoadingComponent
              pageName="Lista Equipamentos"
            >
              <div>
                <h3>
                  Lista Equipamentos Loading....
                </h3>
              </div>
            </PageLoadingComponent>
          </List>
        </Route>
      </Switch>
    </ForkliftPage>
  </Router>
</Provider>
`;

exports[`ForkliftPage Snapshot Update 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Router
    history={
      Object {
        "action": "PUSH",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "KEY_UPDATE1",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          Object {
            "hash": "",
            "key": "KEY_UPDATE2",
            "pathname": "//update/2",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 1,
        "length": 2,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "KEY_UPDATE2",
          "pathname": "//update/2",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <ModalLoading>
      <Modal
        animation={false}
        autoFocus={true}
        backdrop={true}
        centered={true}
        dialogAs={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "displayName": "ModalDialog",
            "render": [Function],
          }
        }
        enforceFocus={true}
        keyboard={true}
        onHide={[Function]}
        restoreFocus={true}
        show={true}
        size="lg"
      >
        <Modal
          autoFocus={true}
          backdrop={true}
          containerClassName="modal-open"
          enforceFocus={true}
          keyboard={true}
          manager={
            BootstrapModalManager {
              "containers": Array [
                <body
                  class="modal-open"
                  style="padding-right: 0px;"
                >
                  <div
                    aria-hidden="true"
                    class="modal-backdrop show"
                  />
                  <div
                    aria-hidden="true"
                    aria-modal="true"
                    class="modal"
                    role="dialog"
                    style="display: block;"
                    tabindex="-1"
                  >
                    <div
                      class="modal-dialog modal-lg modal-dialog-centered"
                      role="document"
                    >
                      <div
                        class="modal-content"
                      >
                        <div
                          class="d-flex justify-content-center"
                        >
                          <div
                            class="m-5 spinner-border text-info"
                            role="status"
                            style="width: 5rem; height: 5rem;"
                          >
                            <span
                              class="sr-only"
                            >
                              Loading....
                            </span>
                          </div>
                        </div>
                        <div
                          class="fade alert alert-info show"
                          role="alert"
                        >
                          Carregando Localizações e Operadores ...
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    aria-hidden="true"
                    class="modal-backdrop show"
                  />
                  <div
                    aria-hidden="true"
                    aria-modal="true"
                    class="modal"
                    role="dialog"
                    style="display: block;"
                    tabindex="-1"
                  >
                    <div
                      class="modal-dialog modal-lg modal-dialog-centered"
                      role="document"
                    >
                      <div
                        class="modal-content"
                      >
                        <div
                          class="d-flex justify-content-center"
                        >
                          <div
                            class="m-5 spinner-border text-info"
                            role="status"
                            style="width: 5rem; height: 5rem;"
                          >
                            <span
                              class="sr-only"
                            >
                              Loading....
                            </span>
                          </div>
                        </div>
                        <div
                          class="fade alert alert-info show"
                          role="alert"
                        >
                          Carregando Localizações e Operadores ...
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="modal-backdrop show"
                  />
                  <div
                    aria-modal="true"
                    class="modal"
                    role="dialog"
                    style="display: block;"
                    tabindex="-1"
                  >
                    <div
                      class="modal-dialog modal-lg modal-dialog-centered"
                      role="document"
                    >
                      <div
                        class="modal-content"
                      >
                        <div
                          class="d-flex justify-content-center"
                        >
                          <div
                            class="m-5 spinner-border text-info"
                            role="status"
                            style="width: 5rem; height: 5rem;"
                          >
                            <span
                              class="sr-only"
                            >
                              Loading....
                            </span>
                          </div>
                        </div>
                        <div
                          class="fade alert alert-info show"
                          role="alert"
                        >
                          Carregando Localizações e Operadores ...
                        </div>
                      </div>
                    </div>
                  </div>
                </body>,
              ],
              "data": Array [
                Object {
                  "classes": Array [
                    "modal-open",
                  ],
                  "modals": Array [
                    Object {
                      "add": [Function],
                      "backdrop": <div
                        aria-hidden="true"
                        class="modal-backdrop show"
                      />,
                      "dialog": <div
                        aria-hidden="true"
                        aria-modal="true"
                        class="modal"
                        role="dialog"
                        style="display: block;"
                        tabindex="-1"
                      >
                        <div
                          class="modal-dialog modal-lg modal-dialog-centered"
                          role="document"
                        >
                          <div
                            class="modal-content"
                          >
                            <div
                              class="d-flex justify-content-center"
                            >
                              <div
                                class="m-5 spinner-border text-info"
                                role="status"
                                style="width: 5rem; height: 5rem;"
                              >
                                <span
                                  class="sr-only"
                                >
                                  Loading....
                                </span>
                              </div>
                            </div>
                            <div
                              class="fade alert alert-info show"
                              role="alert"
                            >
                              Carregando Localizações e Operadores ...
                            </div>
                          </div>
                        </div>
                      </div>,
                      "isTopModal": [Function],
                      "remove": [Function],
                      "setBackdropRef": [Function],
                      "setDialogRef": [Function],
                    },
                    Object {
                      "add": [Function],
                      "backdrop": <div
                        aria-hidden="true"
                        class="modal-backdrop show"
                      />,
                      "dialog": <div
                        aria-hidden="true"
                        aria-modal="true"
                        class="modal"
                        role="dialog"
                        style="display: block;"
                        tabindex="-1"
                      >
                        <div
                          class="modal-dialog modal-lg modal-dialog-centered"
                          role="document"
                        >
                          <div
                            class="modal-content"
                          >
                            <div
                              class="d-flex justify-content-center"
                            >
                              <div
                                class="m-5 spinner-border text-info"
                                role="status"
                                style="width: 5rem; height: 5rem;"
                              >
                                <span
                                  class="sr-only"
                                >
                                  Loading....
                                </span>
                              </div>
                            </div>
                            <div
                              class="fade alert alert-info show"
                              role="alert"
                            >
                              Carregando Localizações e Operadores ...
                            </div>
                          </div>
                        </div>
                      </div>,
                      "isTopModal": [Function],
                      "remove": [Function],
                      "setBackdropRef": [Function],
                      "setDialogRef": [Function],
                    },
                    Object {
                      "add": [Function],
                      "backdrop": <div
                        class="modal-backdrop show"
                      />,
                      "dialog": <div
                        aria-modal="true"
                        class="modal"
                        role="dialog"
                        style="display: block;"
                        tabindex="-1"
                      >
                        <div
                          class="modal-dialog modal-lg modal-dialog-centered"
                          role="document"
                        >
                          <div
                            class="modal-content"
                          >
                            <div
                              class="d-flex justify-content-center"
                            >
                              <div
                                class="m-5 spinner-border text-info"
                                role="status"
                                style="width: 5rem; height: 5rem;"
                              >
                                <span
                                  class="sr-only"
                                >
                                  Loading....
                                </span>
                              </div>
                            </div>
                            <div
                              class="fade alert alert-info show"
                              role="alert"
                            >
                              Carregando Localizações e Operadores ...
                            </div>
                          </div>
                        </div>
                      </div>,
                      "isTopModal": [Function],
                      "remove": [Function],
                      "setBackdropRef": [Function],
                      "setDialogRef": [Function],
                    },
                  ],
                  "overflowing": true,
                  "style": Object {
                    "overflow": "",
                    "paddingRight": "",
                  },
                },
              ],
              "handleContainerOverflow": true,
              "hideSiblingNodes": true,
              "modals": Array [
                Object {
                  "add": [Function],
                  "backdrop": <div
                    aria-hidden="true"
                    class="modal-backdrop show"
                  />,
                  "dialog": <div
                    aria-hidden="true"
                    aria-modal="true"
                    class="modal"
                    role="dialog"
                    style="display: block;"
                    tabindex="-1"
                  >
                    <div
                      class="modal-dialog modal-lg modal-dialog-centered"
                      role="document"
                    >
                      <div
                        class="modal-content"
                      >
                        <div
                          class="d-flex justify-content-center"
                        >
                          <div
                            class="m-5 spinner-border text-info"
                            role="status"
                            style="width: 5rem; height: 5rem;"
                          >
                            <span
                              class="sr-only"
                            >
                              Loading....
                            </span>
                          </div>
                        </div>
                        <div
                          class="fade alert alert-info show"
                          role="alert"
                        >
                          Carregando Localizações e Operadores ...
                        </div>
                      </div>
                    </div>
                  </div>,
                  "isTopModal": [Function],
                  "remove": [Function],
                  "setBackdropRef": [Function],
                  "setDialogRef": [Function],
                },
                Object {
                  "add": [Function],
                  "backdrop": <div
                    aria-hidden="true"
                    class="modal-backdrop show"
                  />,
                  "dialog": <div
                    aria-hidden="true"
                    aria-modal="true"
                    class="modal"
                    role="dialog"
                    style="display: block;"
                    tabindex="-1"
                  >
                    <div
                      class="modal-dialog modal-lg modal-dialog-centered"
                      role="document"
                    >
                      <div
                        class="modal-content"
                      >
                        <div
                          class="d-flex justify-content-center"
                        >
                          <div
                            class="m-5 spinner-border text-info"
                            role="status"
                            style="width: 5rem; height: 5rem;"
                          >
                            <span
                              class="sr-only"
                            >
                              Loading....
                            </span>
                          </div>
                        </div>
                        <div
                          class="fade alert alert-info show"
                          role="alert"
                        >
                          Carregando Localizações e Operadores ...
                        </div>
                      </div>
                    </div>
                  </div>,
                  "isTopModal": [Function],
                  "remove": [Function],
                  "setBackdropRef": [Function],
                  "setDialogRef": [Function],
                },
                Object {
                  "add": [Function],
                  "backdrop": <div
                    class="modal-backdrop show"
                  />,
                  "dialog": <div
                    aria-modal="true"
                    class="modal"
                    role="dialog"
                    style="display: block;"
                    tabindex="-1"
                  >
                    <div
                      class="modal-dialog modal-lg modal-dialog-centered"
                      role="document"
                    >
                      <div
                        class="modal-content"
                      >
                        <div
                          class="d-flex justify-content-center"
                        >
                          <div
                            class="m-5 spinner-border text-info"
                            role="status"
                            style="width: 5rem; height: 5rem;"
                          >
                            <span
                              class="sr-only"
                            >
                              Loading....
                            </span>
                          </div>
                        </div>
                        <div
                          class="fade alert alert-info show"
                          role="alert"
                        >
                          Carregando Localizações e Operadores ...
                        </div>
                      </div>
                    </div>
                  </div>,
                  "isTopModal": [Function],
                  "remove": [Function],
                  "setBackdropRef": [Function],
                  "setDialogRef": [Function],
                },
              ],
              "scrollbarSize": 0,
            }
          }
          onEnter={[Function]}
          onEntering={[Function]}
          onEscapeKeyDown={[Function]}
          onExit={[Function]}
          onExited={[Function]}
          onHide={[Function]}
          renderBackdrop={[Function]}
          renderDialog={[Function]}
          restoreFocus={true}
          show={true}
        >
          <Portal
            containerInfo={
              <body
                class="modal-open"
                style="padding-right: 0px;"
              >
                <div
                  aria-hidden="true"
                  class="modal-backdrop show"
                />
                <div
                  aria-hidden="true"
                  aria-modal="true"
                  class="modal"
                  role="dialog"
                  style="display: block;"
                  tabindex="-1"
                >
                  <div
                    class="modal-dialog modal-lg modal-dialog-centered"
                    role="document"
                  >
                    <div
                      class="modal-content"
                    >
                      <div
                        class="d-flex justify-content-center"
                      >
                        <div
                          class="m-5 spinner-border text-info"
                          role="status"
                          style="width: 5rem; height: 5rem;"
                        >
                          <span
                            class="sr-only"
                          >
                            Loading....
                          </span>
                        </div>
                      </div>
                      <div
                        class="fade alert alert-info show"
                        role="alert"
                      >
                        Carregando Localizações e Operadores ...
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-hidden="true"
                  class="modal-backdrop show"
                />
                <div
                  aria-hidden="true"
                  aria-modal="true"
                  class="modal"
                  role="dialog"
                  style="display: block;"
                  tabindex="-1"
                >
                  <div
                    class="modal-dialog modal-lg modal-dialog-centered"
                    role="document"
                  >
                    <div
                      class="modal-content"
                    >
                      <div
                        class="d-flex justify-content-center"
                      >
                        <div
                          class="m-5 spinner-border text-info"
                          role="status"
                          style="width: 5rem; height: 5rem;"
                        >
                          <span
                            class="sr-only"
                          >
                            Loading....
                          </span>
                        </div>
                      </div>
                      <div
                        class="fade alert alert-info show"
                        role="alert"
                      >
                        Carregando Localizações e Operadores ...
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="modal-backdrop show"
                />
                <div
                  aria-modal="true"
                  class="modal"
                  role="dialog"
                  style="display: block;"
                  tabindex="-1"
                >
                  <div
                    class="modal-dialog modal-lg modal-dialog-centered"
                    role="document"
                  >
                    <div
                      class="modal-content"
                    >
                      <div
                        class="d-flex justify-content-center"
                      >
                        <div
                          class="m-5 spinner-border text-info"
                          role="status"
                          style="width: 5rem; height: 5rem;"
                        >
                          <span
                            class="sr-only"
                          >
                            Loading....
                          </span>
                        </div>
                      </div>
                      <div
                        class="fade alert alert-info show"
                        role="alert"
                      >
                        Carregando Localizações e Operadores ...
                      </div>
                    </div>
                  </div>
                </div>
              </body>
            }
          >
            <div
              className="modal-backdrop show"
              onClick={[Function]}
            />
            <div
              aria-modal={true}
              className="modal"
              onClick={[Function]}
              onMouseUp={[Function]}
              role="dialog"
              style={
                Object {
                  "display": "block",
                }
              }
              tabIndex={-1}
            >
              <ModalDialog
                centered={true}
                onMouseDown={[Function]}
                role="document"
                size="lg"
              >
                <div
                  className="modal-dialog modal-lg modal-dialog-centered"
                  onMouseDown={[Function]}
                  role="document"
                >
                  <div
                    className="modal-content"
                  >
                    <div
                      className="d-flex justify-content-center"
                    >
                      <Spinner
                        animation="border"
                        className="m-5"
                        role="status"
                        style={
                          Object {
                            "height": "5rem",
                            "width": "5rem",
                          }
                        }
                        variant="info"
                      >
                        <div
                          className="m-5 spinner-border text-info"
                          role="status"
                          style={
                            Object {
                              "height": "5rem",
                              "width": "5rem",
                            }
                          }
                        >
                          <span
                            className="sr-only"
                          >
                            Loading....
                          </span>
                        </div>
                      </Spinner>
                    </div>
                    <Alert
                      closeLabel="Close alert"
                      show={true}
                      transition={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "defaultProps": Object {
                            "appear": false,
                            "in": false,
                            "mountOnEnter": false,
                            "timeout": 300,
                            "unmountOnExit": false,
                          },
                          "displayName": "Fade",
                          "render": [Function],
                        }
                      }
                      variant="info"
                    >
                      <Fade
                        appear={false}
                        in={true}
                        mountOnEnter={false}
                        timeout={300}
                        unmountOnExit={true}
                      >
                        <Transition
                          addEndListener={[Function]}
                          appear={false}
                          enter={true}
                          exit={true}
                          in={true}
                          mountOnEnter={false}
                          onEnter={[Function]}
                          onEntered={[Function]}
                          onEntering={[Function]}
                          onExit={[Function]}
                          onExited={[Function]}
                          onExiting={[Function]}
                          timeout={300}
                          unmountOnExit={true}
                        >
                          <div
                            className="fade alert alert-info show"
                            role="alert"
                          >
                            Carregando Localizações e Operadores ...
                          </div>
                        </Transition>
                      </Fade>
                    </Alert>
                  </div>
                </div>
              </ModalDialog>
            </div>
          </Portal>
        </Modal>
      </Modal>
    </ModalLoading>
    <ForkliftPage
      access={
        Object {
          "create": Object {
            "path": "/new",
          },
          "delete": Object {},
          "update": Object {},
        }
      }
    >
      <Switch>
        <Route
          computedMatch={
            Object {
              "isExact": true,
              "params": Object {
                "id": "2",
              },
              "path": "//update/:id",
              "url": "//update/2",
            }
          }
          exact={true}
          location={
            Object {
              "hash": "",
              "key": "KEY_UPDATE2",
              "pathname": "//update/2",
              "search": "",
              "state": undefined,
            }
          }
          path="//update/:id"
        >
          <TitleComponent
            title="Atualizar Equipamento"
          >
            <Alert
              closeLabel="Close alert"
              show={true}
              transition={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "defaultProps": Object {
                    "appear": false,
                    "in": false,
                    "mountOnEnter": false,
                    "timeout": 300,
                    "unmountOnExit": false,
                  },
                  "displayName": "Fade",
                  "render": [Function],
                }
              }
              variant="primary"
            >
              <Fade
                appear={false}
                in={true}
                mountOnEnter={false}
                timeout={300}
                unmountOnExit={true}
              >
                <Transition
                  addEndListener={[Function]}
                  appear={false}
                  enter={true}
                  exit={true}
                  in={true}
                  mountOnEnter={false}
                  onEnter={[Function]}
                  onEntered={[Function]}
                  onEntering={[Function]}
                  onExit={[Function]}
                  onExited={[Function]}
                  onExiting={[Function]}
                  timeout={300}
                  unmountOnExit={true}
                >
                  <div
                    className="fade alert alert-primary show"
                    role="alert"
                  >
                    <Row
                      className="justify-content-md-center"
                      noGutters={false}
                    >
                      <div
                        className="justify-content-md-center row"
                      >
                        <Col
                          lg="10"
                        >
                          <div
                            className="col-lg-10"
                          >
                            <AlertHeading>
                              <DivStyledAsH4
                                className="alert-heading"
                              >
                                <div
                                  className="alert-heading h4"
                                >
                                  Atualizar Equipamento
                                </div>
                              </DivStyledAsH4>
                            </AlertHeading>
                          </div>
                        </Col>
                        <Col
                          className="text-center"
                          md="2"
                        >
                          <div
                            className="text-center col-md-2"
                          />
                        </Col>
                      </div>
                    </Row>
                  </div>
                </Transition>
              </Fade>
            </Alert>
            <AlertList>
              <Alert
                closeLabel="Close alert"
                dismissible={true}
                hidden={true}
                onClose={[Function]}
                show={true}
                transition={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "defaultProps": Object {
                      "appear": false,
                      "in": false,
                      "mountOnEnter": false,
                      "timeout": 300,
                      "unmountOnExit": false,
                    },
                    "displayName": "Fade",
                    "render": [Function],
                  }
                }
                variant="primary"
              >
                <Fade
                  appear={false}
                  hidden={true}
                  in={true}
                  mountOnEnter={false}
                  timeout={300}
                  unmountOnExit={true}
                >
                  <Transition
                    addEndListener={[Function]}
                    appear={false}
                    enter={true}
                    exit={true}
                    hidden={true}
                    in={true}
                    mountOnEnter={false}
                    onEnter={[Function]}
                    onEntered={[Function]}
                    onEntering={[Function]}
                    onExit={[Function]}
                    onExited={[Function]}
                    onExiting={[Function]}
                    timeout={300}
                    unmountOnExit={true}
                  >
                    <div
                      className="fade alert alert-primary alert-dismissible show"
                      hidden={true}
                      role="alert"
                    >
                      <CloseButton
                        label="Close alert"
                        onClick={[Function]}
                      >
                        <button
                          className="close"
                          onClick={[Function]}
                          type="button"
                        >
                          <span
                            aria-hidden="true"
                          >
                            ×
                          </span>
                          <span
                            className="sr-only"
                          >
                            Close alert
                          </span>
                        </button>
                      </CloseButton>
                      <StringArrayToList
                        stringArray={
                          Array [
                            "null",
                          ]
                        }
                      >
                        <ul>
                          <li
                            key="0"
                          >
                            null
                          </li>
                        </ul>
                      </StringArrayToList>
                    </div>
                  </Transition>
                </Fade>
              </Alert>
            </AlertList>
          </TitleComponent>
          <UpdateForm>
            <PageLoadingComponent
              pageName="Equipamento"
            >
              <div>
                <h3>
                  Equipamento Loading....
                </h3>
              </div>
            </PageLoadingComponent>
          </UpdateForm>
        </Route>
      </Switch>
    </ForkliftPage>
  </Router>
</Provider>
`;
